Privacy Policyの表記を修正

--- a/app/src/main/assets/ZipUtility3_Privacy_JA.htm
+++ b/app/src/main/assets/ZipUtility3_Privacy_JA.htm
@@ -387,7 +387,7 @@ lang=JA style='font-family:"ＭＳ ゴシック"'>写真、メディア、ファイル</span></p>
 
 <p class=MsoNormal>-modify or delete the contents of your USB storage</p>
 
-<p class=MsoNormal><span lang=JA style='font-family:"ＭＳ 明朝","serif"'>内部ストレージへのファイル同期と管理ファイルの読み書きで使用します。</span></p>
+<p class=MsoNormal><span lang=JA style='font-family:"ＭＳ 明朝","serif"'>内部ストレージのファイルとディレクトリーの作成・改名・削除で使用します。</span></p>
 
 <p class=20mm8261 style='margin-top:18.0pt'><a name="_Toc33263686">3.2.</a><span
 lang=JA style='font-family:"ＭＳ ゴシック"'>ストレージ</span></p>
@@ -396,7 +396,9 @@ lang=JA style='font-family:"ＭＳ ゴシック"'>ストレージ</span></p>
 
 <p class=MsoNormal>-modify or delete the contents of your USB storage</p>
 
-<p class=MsoNormal>USB<span lang=JA style='font-family:"ＭＳ 明朝","serif"'>ストレージへのファイル同期と管理ファイルの読み書きで使用します。</span></p>
+<p class=MsoNormal>USB<span lang=JA style='font-family:"ＭＳ 明朝","serif"'>ストレージのファイルとディレクトリーの作成・改名・削除で使用します。</span></p>
+
+<p class=MsoNormal>&nbsp;</p>
 
 </div>
 
