--- a/app/src/main/assets/ZipUtility3_Privacy_EN.htm
+++ b/app/src/main/assets/ZipUtility3_Privacy_EN.htm
@@ -378,8 +378,8 @@ src="ZipUtility3_Privacy_EN.files/image001.png" alt="*"><span style='font:7.0pt 
 
 <p class=MsoNormal>-modify or delete the contents of your USB storage</p>
 
-<p class=MsoNormal>Used for file synchronization to internal/external storage
-and read/write of management file.</p>
+<p class=MsoNormal>Used to create, rename, and delete files and directories in
+internal storage.</p>
 
 <p class=MsoNormal>&nbsp;</p>
 
@@ -389,8 +389,8 @@ and read/write of management file.</p>
 
 <p class=MsoNormal>-modify or delete the contents of your USB storage</p>
 
-<p class=MsoNormal>Used for file synchronization to USB storage and read/write
-of management file.</p>
+<p class=MsoNormal>Used to create, rename, and delete files and directories in USB
+storage.</p>
 
 <p class=MsoNormal>&nbsp;</p>
 
