--- a/app/src/main/assets/ZipUtility3_Change_EN.htm
+++ b/app/src/main/assets/ZipUtility3_Change_EN.htm
@@ -340,6 +340,14 @@ name="_Toc386446736">Change history</a></h1>
 <p class=MsoListParagraph align=left style='margin-left:21.0pt;text-align:left;
 text-indent:-21.0pt'><span style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Change_EN.files/image001.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span>2019/03/05 1.08</p>
+
+<p class=MsoListParagraph align=left style='margin-left:21.0pt;text-align:left'>Corrected
+privacy policy notation</p>
+
+<p class=MsoListParagraph align=left style='margin-left:21.0pt;text-align:left;
+text-indent:-21.0pt'><span style='font-family:Symbol'><img width=11 height=11
+src="ZipUtility3_Change_EN.files/image001.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span>2019/02/29 1.07</p>
 
 <p class=MsoListParagraph align=left style='margin-left:21.0pt;text-align:left'>Prevent
