ExtractだけBZIP2を使用可能にした。

--- a/app/src/main/assets/ZipUtility3_Desc_JA_Short.htm
+++ b/app/src/main/assets/ZipUtility3_Desc_JA_Short.htm
@@ -280,7 +280,7 @@ ul
 
 <h1 style='margin-top:18.0pt'><span style='text-decoration:none'>1.<span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp; </span></span><span
-lang=JA style='font-family:"ＭＳ ゴシック"'>説明</span></h1>
+lang=JA style='font-family:"ＭＳ ゴシック"'>機能</span></h1>
 
 <p class=MsoNormal style='word-break:break-all'>Zip<span lang=JA
 style='font-family:"ＭＳ 明朝","serif"'>ファイルの編集・抽出を行うアプリです、パスワード保護</span>Zip<span
@@ -377,6 +377,20 @@ page-break-after:avoid'><span style='font-family:Symbol'><img width=11
 height=11 src="ZipUtility3_Desc_JA_Short.files/image001.png" alt="*"><span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span><a href="http://www.lingala.net/zip4j.html">Zip4J 2.2.3</a></p>
+
+<p class=MsoListParagraph style='margin-left:21.3pt;text-indent:-21.3pt;
+page-break-after:avoid'><span style='font-family:Symbol'><img width=11
+height=11 src="ZipUtility3_Desc_JA_Short.files/image001.png" alt="*"><span
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span><a
+href="https://commons.apache.org/proper/commons-compress/index.html">Apache
+Commons Compress 1.20</a></p>
+
+<p class=MsoListParagraph style='margin-left:21.3pt;text-indent:-21.3pt;
+page-break-after:avoid'><span style='font-family:Symbol'><img width=11
+height=11 src="ZipUtility3_Desc_JA_Short.files/image001.png" alt="*"><span
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span><a href="https://tukaani.org/xz/java.html">XZ-1.5</a></p>
 
 <p class=MsoNormal style='page-break-after:avoid'>&nbsp;</p>
 
