--- a/app/src/main/assets/ZipUtility3_Privacy_EN.htm
+++ b/app/src/main/assets/ZipUtility3_Privacy_EN.htm
@@ -340,8 +340,8 @@ unless the user operates it.</p>
 <h2 style='margin-top:18.0pt'><a name="_Toc33263653"></a><a
 name="_2.1_Synchronization_task"></a>2.1.App activity record</h2>
 
-<p class=MsoNormal>The app records the data of the following items for
-verification of synchronization results and troubleshooting.</p>
+<p class=MsoNormal>Record the data of the following items to verify that the
+application processed normally after processing.</p>
 
 <p class=MsoListParagraph style='margin-left:21.0pt;text-indent:-21.0pt'><span
 style='font-family:Symbol'><img width=11 height=11
