--- a/app/src/main/assets/ZipUtility3_Privacy_JA.htm
+++ b/app/src/main/assets/ZipUtility3_Privacy_JA.htm
@@ -349,7 +349,7 @@ style='font-family:"ＭＳ 明朝","serif"'>アプリが記録するデータ</span></h1>
 <h2 style='margin-top:18.0pt'><a name="_Toc33263683"></a><a name="_2.1同期タスクリスト"></a>2.1<span
 lang=JA style='font-family:"ＭＳ ゴシック"'>アプリ稼動記録</span></h2>
 
-<p class=MsoNormal><span lang=JA style='font-family:"ＭＳ 明朝","serif"'>アプリは同期結果の検証とトラブル解決のために下記項目のデータを記録します。</span></p>
+<p class=MsoNormal><span lang=JA style='font-family:"ＭＳ 明朝","serif"'>アプリが正常に処理した事を処理後に検証するために下記項目のデータを記録します。</span></p>
 
 <p class=MsoListParagraph style='margin-left:21.0pt;text-indent:-21.0pt'><span
 style='font-family:Symbol'><img width=11 height=11
