--- a/app/src/main/assets/ZipUtility3_Desc_EN_Short.htm
+++ b/app/src/main/assets/ZipUtility3_Desc_EN_Short.htm
@@ -347,7 +347,7 @@ ul
 <div class=WordSection1 style='layout-grid:18.0pt'>
 
 <h1 style='margin-top:18.0pt'><span style='text-decoration:none'>1.<span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp; </span></span>Description</h1>
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp; </span></span>Capabbility</h1>
 
 <p class=MsoNormal><span style='font-size:12.0pt'>It is an application for
 creating, editing, and extracting ZIP file. </span></p>
@@ -419,6 +419,20 @@ page-break-after:avoid'><span style='font-family:Symbol'><img width=11
 height=11 src="ZipUtility3_Desc_EN_Short.files/image001.png" alt="*"><span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span><a href="http://www.lingala.net/zip4j.html">Zip4J 2.2.3</a></p>
+
+<p class=MsoListParagraph style='margin-left:21.3pt;text-indent:-21.3pt;
+page-break-after:avoid'><span style='font-family:Symbol'><img width=11
+height=11 src="ZipUtility3_Desc_EN_Short.files/image001.png" alt="*"><span
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span><a
+href="https://commons.apache.org/proper/commons-compress/index.html">Apache
+Commons Compress 1.20</a></p>
+
+<p class=MsoListParagraph style='margin-left:21.3pt;text-indent:-21.3pt;
+page-break-after:avoid'><span style='font-family:Symbol'><img width=11
+height=11 src="ZipUtility3_Desc_EN_Short.files/image001.png" alt="*"><span
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span><a href="https://tukaani.org/xz/java.html">XZ-1.5</a></p>
 
 <p class=MsoNormal style='page-break-after:avoid'>&nbsp;</p>
 
