--- a/app/src/main/assets/ZipUtility3_Change_JA.htm
+++ b/app/src/main/assets/ZipUtility3_Change_JA.htm
@@ -255,75 +255,104 @@ style='font-family:"ＭＳ ゴシック"'>更新履歴</span></a></h1>
 <p class=MsoListParagraph align=left style='margin-left:21.0pt;text-align:left;
 text-indent:-21.0pt'><span style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Change_JA.files/image001.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span>2019/03/08 1.10</p>
+
+<p class=MsoListParagraph align=left style='margin-left:42.55pt;text-align:
+left;text-indent:-21.25pt'><span style='font-family:Symbol'><img width=11
+height=11 src="ZipUtility3_Change_JA.files/image002.png" alt="*"><span
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp; </span></span><span
+lang=JA style='font-family:"ＭＳ 明朝","serif"'>インストール直後のアプリ起動中にアプリが強制終了しないようにした</span></p>
+
+<p class=MsoListParagraph align=left style='margin-left:21.0pt;text-align:left;
+text-indent:-21.0pt'><span style='font-family:Symbol'><img width=11 height=11
+src="ZipUtility3_Change_JA.files/image001.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span>2019/03/06 1.09</p>
 
-<p class=MsoListParagraph align=left style='margin-left:21.0pt;text-align:left'><span
-lang=JA style='font-family:"ＭＳ 明朝","serif"'>アプリの強制終了を回避</span></p>
+<p class=MsoListParagraph align=left style='margin-left:39.0pt;text-align:left;
+text-indent:-18.0pt'><span style='font-family:Symbol'><img width=11 height=11
+src="ZipUtility3_Change_JA.files/image002.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span><span lang=JA style='font-family:"ＭＳ 明朝","serif"'>アプリの強制終了を回避</span></p>
 
 <p class=MsoListParagraph align=left style='margin-left:21.0pt;text-align:left;
 text-indent:-21.0pt'><span style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Change_JA.files/image001.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span>2019/03/05 1.08</p>
 
-<p class=MsoListParagraph align=left style='margin-left:21.0pt;text-align:left'><span
-lang=JA style='font-family:"ＭＳ 明朝","serif"'>プライバシーポリシーの表記を修正</span></p>
+<p class=MsoListParagraph align=left style='margin-left:39.0pt;text-align:left;
+text-indent:-18.0pt'><span style='font-family:Symbol'><img width=11 height=11
+src="ZipUtility3_Change_JA.files/image002.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span><span lang=JA style='font-family:"ＭＳ 明朝","serif"'>プライバシーポリシーの表記を修正</span></p>
 
 <p class=MsoListParagraph align=left style='margin-left:21.0pt;text-align:left;
 text-indent:-21.0pt'><span style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Change_JA.files/image001.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span>2019/02/29 1.07</p>
 
-<p class=MsoListParagraph align=left style='margin-left:21.0pt;text-align:left'><span
-lang=JA style='font-family:"ＭＳ 明朝","serif"'>アプリの強制終了を回避</span></p>
+<p class=MsoListParagraph align=left style='margin-left:39.0pt;text-align:left;
+text-indent:-18.0pt'><span style='font-family:Symbol'><img width=11 height=11
+src="ZipUtility3_Change_JA.files/image002.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span><span lang=JA style='font-family:"ＭＳ 明朝","serif"'>アプリの強制終了を回避</span></p>
 
 <p class=MsoListParagraph align=left style='margin-left:21.0pt;text-align:left;
 text-indent:-21.0pt'><span style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Change_JA.files/image001.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span>2019/02/28 1.06</p>
 
-<p class=MsoListParagraph align=left style='margin-left:21.0pt;text-align:left'><span
-lang=JA style='font-family:"ＭＳ 明朝","serif"'>ファイルリストの文字サイズを最適化</span></p>
+<p class=MsoListParagraph align=left style='margin-left:39.0pt;text-align:left;
+text-indent:-18.0pt'><span style='font-family:Symbol'><img width=11 height=11
+src="ZipUtility3_Change_JA.files/image002.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span><span lang=JA style='font-family:"ＭＳ 明朝","serif"'>ファイルリストの文字サイズを最適化</span></p>
 
 <p class=MsoListParagraph align=left style='margin-left:21.0pt;text-align:left;
 text-indent:-21.0pt'><span style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Change_JA.files/image001.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span>2019/02/27 1.05</p>
 
-<p class=MsoListParagraph align=left style='margin-left:21.0pt;text-align:left'>Extract<span
-lang=JA style='font-family:"ＭＳ 明朝","serif"'>のパフォーマンス向上</span></p>
+<p class=MsoListParagraph align=left style='margin-left:39.0pt;text-align:left;
+text-indent:-18.0pt'><span style='font-family:Symbol'><img width=11 height=11
+src="ZipUtility3_Change_JA.files/image002.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span>Extract<span lang=JA style='font-family:"ＭＳ 明朝","serif"'>のパフォーマンス向上</span></p>
 
 <p class=MsoListParagraph align=left style='margin-left:21.0pt;text-align:left;
 text-indent:-21.0pt'><span style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Change_JA.files/image001.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span>2019/02/25 1.04</p>
 
-<p class=MsoListParagraph align=left style='margin-left:21.0pt;text-align:left'><span
-lang=JA style='font-family:"ＭＳ 明朝","serif"'>アプリの強制終了を回避</span></p>
+<p class=MsoListParagraph align=left style='margin-left:39.0pt;text-align:left;
+text-indent:-18.0pt'><span style='font-family:Symbol'><img width=11 height=11
+src="ZipUtility3_Change_JA.files/image002.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span><span lang=JA style='font-family:"ＭＳ 明朝","serif"'>アプリの強制終了を回避</span></p>
 
 <p class=MsoListParagraph align=left style='margin-left:21.0pt;text-align:left;
 text-indent:-21.0pt'><span style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Change_JA.files/image001.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span>2019/02/24 1.03 </p>
 
-<p class=MsoListParagraph align=left style='margin-left:21.0pt;text-align:left'><span
-lang=JA style='font-family:"ＭＳ 明朝","serif"'>外部ストレージの追加を表示するようにした</span></p>
+<p class=MsoListParagraph align=left style='margin-left:39.0pt;text-align:left;
+text-indent:-18.0pt'><span style='font-family:Symbol'><img width=11 height=11
+src="ZipUtility3_Change_JA.files/image002.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span><span lang=JA style='font-family:"ＭＳ 明朝","serif"'>外部ストレージの追加を表示するようにした</span></p>
 
 <p class=MsoListParagraph align=left style='margin-left:21.0pt;text-align:left;
 text-indent:-21.0pt'><span style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Change_JA.files/image001.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span>2019/02/21 1.02 </p>
 
-<p class=MsoListParagraph align=left style='margin-left:21.0pt;text-align:left'>Android
-10<span lang=JA style='font-family:"ＭＳ 明朝","serif"'>での</span>Legacy Storage<span
-lang=JA style='font-family:"ＭＳ 明朝","serif"'>対応に変更</span></p>
+<p class=MsoListParagraph align=left style='margin-left:39.0pt;text-align:left;
+text-indent:-18.0pt'><span style='font-family:Symbol'><img width=11 height=11
+src="ZipUtility3_Change_JA.files/image002.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span>Android 10<span lang=JA style='font-family:"ＭＳ 明朝","serif"'>での</span>Legacy
+Storage<span lang=JA style='font-family:"ＭＳ 明朝","serif"'>対応に変更</span></p>
 
 <p class=MsoListParagraph align=left style='margin-left:21.0pt;text-align:left;
 text-indent:-21.0pt'><span style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Change_JA.files/image001.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span>2019/02/19 1.00 </p>
 
-<p class=MsoNormal align=left style='margin-left:12.0pt;text-align:left;
-text-indent:9.0pt'><span lang=JA style='font-family:"ＭＳ 明朝","serif"'>最初のリリース</span></p>
+<p class=MsoListParagraph align=left style='margin-left:39.0pt;text-align:left;
+text-indent:-18.0pt'><span style='font-family:Symbol'><img width=11 height=11
+src="ZipUtility3_Change_JA.files/image002.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span><span lang=JA style='font-family:"ＭＳ 明朝","serif"'>最初のリリース</span></p>
 
 </div>
 
