Propertyでの圧縮方式の表示を改善

--- a/app/src/main/assets/ZipUtility3_Change_JA.htm
+++ b/app/src/main/assets/ZipUtility3_Change_JA.htm
@@ -255,6 +255,17 @@ style='font-family:"‚l‚r ƒSƒVƒbƒN"'>XV—š—ğ</span></a></h1>
 <p class=MsoListParagraph align=left style='margin-left:21.0pt;text-align:left;
 text-indent:-21.0pt'><span style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Change_JA.files/image001.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span>2019/03/09 1.11</p>
+
+<p class=MsoListParagraph align=left style='margin-left:42.55pt;text-align:
+left;text-indent:-21.25pt'><span style='font-family:Symbol'><img width=11
+height=11 src="ZipUtility3_Change_JA.files/image002.png" alt="*"><span
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp; </span></span>Property<span
+lang=JA style='font-family:"‚l‚r –¾’©","serif"'>‚Å‚Ìˆ³k•û®‚Ì•\¦‚ğ‰ü‘P</span></p>
+
+<p class=MsoListParagraph align=left style='margin-left:21.0pt;text-align:left;
+text-indent:-21.0pt'><span style='font-family:Symbol'><img width=11 height=11
+src="ZipUtility3_Change_JA.files/image001.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span>2019/03/08 1.10</p>
 
 <p class=MsoListParagraph align=left style='margin-left:42.55pt;text-align:
