--- a/app/src/main/assets/ZipUtility3_Change_EN.htm
+++ b/app/src/main/assets/ZipUtility3_Change_EN.htm
@@ -340,6 +340,17 @@ name="_Toc386446736">Change history</a></h1>
 <p class=MsoListParagraph align=left style='margin-left:21.0pt;text-align:left;
 text-indent:-21.0pt'><span style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Change_EN.files/image001.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span>2019/03/09 1.11</p>
+
+<p class=MsoListParagraph align=left style='margin-left:42.55pt;text-align:
+left;text-indent:-21.25pt'><span style='font-family:Symbol'><img width=11
+height=11 src="ZipUtility3_Change_EN.files/image002.png" alt="*"><span
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp; </span></span>Improved
+display of compression method in Property</p>
+
+<p class=MsoListParagraph align=left style='margin-left:21.0pt;text-align:left;
+text-indent:-21.0pt'><span style='font-family:Symbol'><img width=11 height=11
+src="ZipUtility3_Change_EN.files/image001.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span>2019/03/08 1.10</p>
 
 <p class=MsoListParagraph align=left style='margin-left:39.0pt;text-align:left;
