--- a/app/src/main/assets/ZipUtility3_Change_EN.htm
+++ b/app/src/main/assets/ZipUtility3_Change_EN.htm
@@ -340,7 +340,18 @@ name="_Toc386446736">Change history</a></h1>
 <p class=MsoListParagraph align=left style='margin-left:21.0pt;text-align:left;
 text-indent:-21.0pt'><span style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Change_EN.files/image001.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span>2019/03/09 1.11</p>
+</span></span>2020/03/11 1.12</p>
+
+<p class=MsoListParagraph align=left style='margin-left:42.55pt;text-align:
+left;text-indent:-21.25pt'><span style='font-family:Symbol'><img width=11
+height=11 src="ZipUtility3_Change_EN.files/image002.png" alt="*"><span
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp; </span></span>Fixed bug
+where password could not be entered</p>
+
+<p class=MsoListParagraph align=left style='margin-left:21.0pt;text-align:left;
+text-indent:-21.0pt'><span style='font-family:Symbol'><img width=11 height=11
+src="ZipUtility3_Change_EN.files/image001.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span>2020/03/09 1.11</p>
 
 <p class=MsoListParagraph align=left style='margin-left:42.55pt;text-align:
 left;text-indent:-21.25pt'><span style='font-family:Symbol'><img width=11
@@ -351,7 +362,7 @@ display of compression method in Property</p>
 <p class=MsoListParagraph align=left style='margin-left:21.0pt;text-align:left;
 text-indent:-21.0pt'><span style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Change_EN.files/image001.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span>2019/03/08 1.10</p>
+</span></span>2020/03/08 1.10</p>
 
 <p class=MsoListParagraph align=left style='margin-left:39.0pt;text-align:left;
 text-indent:-18.0pt'><span style='font-family:Symbol'><img width=11 height=11
@@ -362,7 +373,7 @@ after installation.</p>
 <p class=MsoListParagraph align=left style='margin-left:21.0pt;text-align:left;
 text-indent:-21.0pt'><span style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Change_EN.files/image001.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span>2019/03/06 1.09</p>
+</span></span>2020/03/06 1.09</p>
 
 <p class=MsoListParagraph align=left style='margin-left:39.0pt;text-align:left;
 text-indent:-18.0pt'><span style='font-family:Symbol'><img width=11 height=11
@@ -372,7 +383,7 @@ src="ZipUtility3_Change_EN.files/image002.png" alt="*"><span style='font:7.0pt "
 <p class=MsoListParagraph align=left style='margin-left:21.0pt;text-align:left;
 text-indent:-21.0pt'><span style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Change_EN.files/image001.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span>2019/03/05 1.08</p>
+</span></span>2020/03/05 1.08</p>
 
 <p class=MsoListParagraph align=left style='margin-left:39.0pt;text-align:left;
 text-indent:-18.0pt'><span style='font-family:Symbol'><img width=11 height=11
@@ -382,7 +393,7 @@ src="ZipUtility3_Change_EN.files/image002.png" alt="*"><span style='font:7.0pt "
 <p class=MsoListParagraph align=left style='margin-left:21.0pt;text-align:left;
 text-indent:-21.0pt'><span style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Change_EN.files/image001.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span>2019/02/29 1.07</p>
+</span></span>2020/02/29 1.07</p>
 
 <p class=MsoListParagraph align=left style='margin-left:39.0pt;text-align:left;
 text-indent:-18.0pt'><span style='font-family:Symbol'><img width=11 height=11
@@ -392,7 +403,7 @@ src="ZipUtility3_Change_EN.files/image002.png" alt="*"><span style='font:7.0pt "
 <p class=MsoListParagraph align=left style='margin-left:21.0pt;text-align:left;
 text-indent:-21.0pt'><span style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Change_EN.files/image001.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span>2019/02/28 1.06</p>
+</span></span>2020/02/28 1.06</p>
 
 <p class=MsoListParagraph align=left style='margin-left:39.0pt;text-align:left;
 text-indent:-18.0pt'><span style='font-family:Symbol'><img width=11 height=11
@@ -402,7 +413,7 @@ src="ZipUtility3_Change_EN.files/image002.png" alt="*"><span style='font:7.0pt "
 <p class=MsoListParagraph align=left style='margin-left:21.0pt;text-align:left;
 text-indent:-21.0pt'><span style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Change_EN.files/image001.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span>2019/02/27 1.05</p>
+</span></span>2020/02/27 1.05</p>
 
 <p class=MsoListParagraph align=left style='margin-left:39.0pt;text-align:left;
 text-indent:-18.0pt'><span style='font-family:Symbol'><img width=11 height=11
@@ -412,7 +423,7 @@ src="ZipUtility3_Change_EN.files/image002.png" alt="*"><span style='font:7.0pt "
 <p class=MsoListParagraph align=left style='margin-left:21.0pt;text-align:left;
 text-indent:-21.0pt'><span style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Change_EN.files/image001.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span>2019/02/25 1.04</p>
+</span></span>2020/02/25 1.04</p>
 
 <p class=MsoListParagraph align=left style='margin-left:39.0pt;text-align:left;
 text-indent:-18.0pt'><span style='font-family:Symbol'><img width=11 height=11
@@ -422,7 +433,7 @@ src="ZipUtility3_Change_EN.files/image002.png" alt="*"><span style='font:7.0pt "
 <p class=MsoListParagraph align=left style='margin-left:21.0pt;text-align:left;
 text-indent:-21.0pt'><span style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Change_EN.files/image001.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span>2019/02/24 1.03 </p>
+</span></span>2020/02/24 1.03 </p>
 
 <p class=MsoListParagraph align=left style='margin-left:39.0pt;text-align:left;
 text-indent:-18.0pt'><span style='font-family:Symbol'><img width=11 height=11
@@ -432,7 +443,7 @@ src="ZipUtility3_Change_EN.files/image002.png" alt="*"><span style='font:7.0pt "
 <p class=MsoListParagraph align=left style='margin-left:21.0pt;text-align:left;
 text-indent:-21.0pt'><span style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Change_EN.files/image001.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span>2019/02/21 1.02 </p>
+</span></span>2020/02/21 1.02 </p>
 
 <p class=MsoListParagraph align=left style='margin-left:39.0pt;text-align:left;
 text-indent:-18.0pt'><span style='font-family:Symbol'><img width=11 height=11
@@ -442,7 +453,7 @@ src="ZipUtility3_Change_EN.files/image002.png" alt="*"><span style='font:7.0pt "
 <p class=MsoListParagraph align=left style='margin-left:21.0pt;text-align:left;
 text-indent:-21.0pt'><span style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Change_EN.files/image001.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span>2019/02/19 1.00 </p>
+</span></span>2020/02/19 1.00 </p>
 
 <p class=MsoListParagraph align=left style='margin-left:39.0pt;text-align:left;
 text-indent:-18.0pt'><span style='font-family:Symbol'><img width=11 height=11
