--- a/app/src/main/assets/ZipUtility3_Change_JA.htm
+++ b/app/src/main/assets/ZipUtility3_Change_JA.htm
@@ -255,7 +255,18 @@ style='font-family:"ＭＳ ゴシック"'>更新履歴</span></a></h1>
 <p class=MsoListParagraph align=left style='margin-left:21.0pt;text-align:left;
 text-indent:-21.0pt'><span style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Change_JA.files/image001.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span>2019/03/09 1.11</p>
+</span></span>2020/03/11 1.12</p>
+
+<p class=MsoListParagraph align=left style='margin-left:42.55pt;text-align:
+left;text-indent:-21.25pt'><span style='font-family:Symbol'><img width=11
+height=11 src="ZipUtility3_Change_JA.files/image002.png" alt="*"><span
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp; </span></span><span
+lang=JA style='font-family:"ＭＳ 明朝","serif"'>パスワードが入力できないバグを解決</span></p>
+
+<p class=MsoListParagraph align=left style='margin-left:21.0pt;text-align:left;
+text-indent:-21.0pt'><span style='font-family:Symbol'><img width=11 height=11
+src="ZipUtility3_Change_JA.files/image001.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span>2020/03/09 1.11</p>
 
 <p class=MsoListParagraph align=left style='margin-left:42.55pt;text-align:
 left;text-indent:-21.25pt'><span style='font-family:Symbol'><img width=11
@@ -266,7 +277,7 @@ lang=JA style='font-family:"ＭＳ 明朝","serif"'>での圧縮方式の表示を改善</span><
 <p class=MsoListParagraph align=left style='margin-left:21.0pt;text-align:left;
 text-indent:-21.0pt'><span style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Change_JA.files/image001.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span>2019/03/08 1.10</p>
+</span></span>2020/03/08 1.10</p>
 
 <p class=MsoListParagraph align=left style='margin-left:42.55pt;text-align:
 left;text-indent:-21.25pt'><span style='font-family:Symbol'><img width=11
@@ -277,7 +288,7 @@ lang=JA style='font-family:"ＭＳ 明朝","serif"'>インストール直後のアプリ起動中に
 <p class=MsoListParagraph align=left style='margin-left:21.0pt;text-align:left;
 text-indent:-21.0pt'><span style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Change_JA.files/image001.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span>2019/03/06 1.09</p>
+</span></span>2020/03/06 1.09</p>
 
 <p class=MsoListParagraph align=left style='margin-left:39.0pt;text-align:left;
 text-indent:-18.0pt'><span style='font-family:Symbol'><img width=11 height=11
@@ -287,7 +298,7 @@ src="ZipUtility3_Change_JA.files/image002.png" alt="*"><span style='font:7.0pt "
 <p class=MsoListParagraph align=left style='margin-left:21.0pt;text-align:left;
 text-indent:-21.0pt'><span style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Change_JA.files/image001.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span>2019/03/05 1.08</p>
+</span></span>2020/03/05 1.08</p>
 
 <p class=MsoListParagraph align=left style='margin-left:39.0pt;text-align:left;
 text-indent:-18.0pt'><span style='font-family:Symbol'><img width=11 height=11
@@ -297,7 +308,7 @@ src="ZipUtility3_Change_JA.files/image002.png" alt="*"><span style='font:7.0pt "
 <p class=MsoListParagraph align=left style='margin-left:21.0pt;text-align:left;
 text-indent:-21.0pt'><span style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Change_JA.files/image001.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span>2019/02/29 1.07</p>
+</span></span>2020/02/29 1.07</p>
 
 <p class=MsoListParagraph align=left style='margin-left:39.0pt;text-align:left;
 text-indent:-18.0pt'><span style='font-family:Symbol'><img width=11 height=11
@@ -307,7 +318,7 @@ src="ZipUtility3_Change_JA.files/image002.png" alt="*"><span style='font:7.0pt "
 <p class=MsoListParagraph align=left style='margin-left:21.0pt;text-align:left;
 text-indent:-21.0pt'><span style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Change_JA.files/image001.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span>2019/02/28 1.06</p>
+</span></span>2020/02/28 1.06</p>
 
 <p class=MsoListParagraph align=left style='margin-left:39.0pt;text-align:left;
 text-indent:-18.0pt'><span style='font-family:Symbol'><img width=11 height=11
@@ -317,7 +328,7 @@ src="ZipUtility3_Change_JA.files/image002.png" alt="*"><span style='font:7.0pt "
 <p class=MsoListParagraph align=left style='margin-left:21.0pt;text-align:left;
 text-indent:-21.0pt'><span style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Change_JA.files/image001.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span>2019/02/27 1.05</p>
+</span></span>2020/02/27 1.05</p>
 
 <p class=MsoListParagraph align=left style='margin-left:39.0pt;text-align:left;
 text-indent:-18.0pt'><span style='font-family:Symbol'><img width=11 height=11
@@ -327,7 +338,7 @@ src="ZipUtility3_Change_JA.files/image002.png" alt="*"><span style='font:7.0pt "
 <p class=MsoListParagraph align=left style='margin-left:21.0pt;text-align:left;
 text-indent:-21.0pt'><span style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Change_JA.files/image001.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span>2019/02/25 1.04</p>
+</span></span>2020/02/25 1.04</p>
 
 <p class=MsoListParagraph align=left style='margin-left:39.0pt;text-align:left;
 text-indent:-18.0pt'><span style='font-family:Symbol'><img width=11 height=11
@@ -337,7 +348,7 @@ src="ZipUtility3_Change_JA.files/image002.png" alt="*"><span style='font:7.0pt "
 <p class=MsoListParagraph align=left style='margin-left:21.0pt;text-align:left;
 text-indent:-21.0pt'><span style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Change_JA.files/image001.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span>2019/02/24 1.03 </p>
+</span></span>2020/02/24 1.03 </p>
 
 <p class=MsoListParagraph align=left style='margin-left:39.0pt;text-align:left;
 text-indent:-18.0pt'><span style='font-family:Symbol'><img width=11 height=11
@@ -347,7 +358,7 @@ src="ZipUtility3_Change_JA.files/image002.png" alt="*"><span style='font:7.0pt "
 <p class=MsoListParagraph align=left style='margin-left:21.0pt;text-align:left;
 text-indent:-21.0pt'><span style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Change_JA.files/image001.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span>2019/02/21 1.02 </p>
+</span></span>2020/02/21 1.02 </p>
 
 <p class=MsoListParagraph align=left style='margin-left:39.0pt;text-align:left;
 text-indent:-18.0pt'><span style='font-family:Symbol'><img width=11 height=11
@@ -358,7 +369,7 @@ Storage<span lang=JA style='font-family:"ＭＳ 明朝","serif"'>対応に変更</span></
 <p class=MsoListParagraph align=left style='margin-left:21.0pt;text-align:left;
 text-indent:-21.0pt'><span style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Change_JA.files/image001.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span>2019/02/19 1.00 </p>
+</span></span>2020/02/19 1.00 </p>
 
 <p class=MsoListParagraph align=left style='margin-left:39.0pt;text-align:left;
 text-indent:-18.0pt'><span style='font-family:Symbol'><img width=11 height=11
